Use jlink to publish binary